--- a/css/reserve.css
+++ b/css/reserve.css
@@ -1,27 +1,38 @@
 .reserve {
-  height: 80vh;
+  height: 64vh;
   padding-top: 70px;
+  background-image: url("../image/reserveback.jpg");
+  background-position: center;
+}
+.reserve .inner{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .reserve-top {
-  height: 50%;
+  height: 20%;
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-bottom: 50px;
 }
-.reserve-img img {
-  height: 300px;
-  object-fit: cover;
+.reserve-text{
+  font-size: 60px;
+  font-weight: 600;
+  color: #fff;
 }
 .reserve-menu {
   width: auto;
   height: 100px;
   border-radius: 30px;
-  box-shadow: 0px 0px 20px #ccc;
+  box-shadow: 0px 0px 20px #222222;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 20px;
+  background-color: #fff;
 }
 .reserve-form {
   display: flex;
@@ -116,6 +127,7 @@
   color: #ffffff;
   position: absolute;
   left: 45%;
+  bottom: 15%;
   cursor: pointer;
 }
 .reserve-btn:hover {
