--- a/css/reserve.css
+++ b/css/reserve.css
@@ -22,7 +22,7 @@
 }
 
 .reserve-text {
-  font-size: 60px;
+  font-size: 36px;
   font-weight: 600;
   color: #fff;
 }
@@ -36,7 +36,7 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 20px;
-  background-color: #c3defc;
+  background-color: #ffffff;
 }
 
 .reserve-form {
@@ -65,11 +65,11 @@
   justify-content: flex-start;
   position: relative;
   cursor: pointer;
-  background-color: #fff;
+  background-color: #ffffff;
+  border: 1px solid #333;
 }
-
 .reserve-sel h3 {
-  color: #adadad;
+  color: #979797;
 }
 
 .reserve-sel span {
@@ -561,16 +561,22 @@
 
 /* 인원 객실 선택 */
 .reserve-per-form {
+  display: none;
   width: 100%;
   height: auto;
   background-color: #fff;
   position: absolute;
   border: 1px solid #000;
   border-radius: 20px;
-  padding: 15px 20px;
+  padding: 15px 15px;
   top: 115%;
+  z-index: 9999;
 }
-
+.reserve-per-form h4{
+  font-size: 18px;
+  color: #adadad;
+  
+}
 .per-num {
   display: flex;
   justify-content: space-between;
@@ -588,29 +594,32 @@
   display: flex;
   align-items: center;
 }
-
+.per-age{
+  font-size: 12px;
+  color: #a5a5a5;
+}
 .per-add span {
   border-radius: 7px;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 40px;
-  width: 40px;
+  height: 30px;
+  width: 30px;
   margin: 0 10px;
 }
 
 .per-add span:hover {
   background-color: rgba(170, 175, 245, 0.2);
 }
-
+.per-add p{
+  font-weight: bold;
+}
 .reserve-per-btn {
   padding: 10px 20px;
   background-color: #3f99ff;
-  display: inline-block;
   border-radius: 20px;
   color: #fff;
-  position: relative;
-  left: 35%;
+  float: right;
 }
 
 .reserve-per-btn:hover {
