--- a/css/style.css
+++ b/css/style.css
@@ -5,4 +5,6 @@
 @import url("modal.css");
 @import url("header.css");
 @import url("reserve.css");
+@import url("event.css");
+@import url("popular-hotel.css");
 @import url("footer.css");
