feat : 프로젝트 부분 작업중

--- a/css/style.css
+++ b/css/style.css
@@ -6,5 +6,6 @@
 @import url("header.css");
 @import url("reserve.css");
 @import url("event.css");
+@import url("popular.css");
 @import url("popular-hotel.css");
 @import url("footer.css");
